// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuiverLanguageModel > maps QuiverAI draft deltas and content snapshots into reasoning and text parts 1`] = `
[
  {
    "type": "stream-start",
    "warnings": [],
  },
  {
    "rawValue": {
      "reasoning": "Legacy QuiverAI reasoning text that should be ignored.",
      "type": "generating",
    },
    "type": "raw",
  },
  {
    "rawValue": {
      "id": "svg-stream-1",
      "svg": "<svg>",
      "type": "draft",
      "usage": {
        "input_tokens": 2,
        "output_tokens": 2,
        "total_tokens": 4,
      },
    },
    "type": "raw",
  },
  {
    "id": "svg-stream-1",
    "modelId": "quiver-svg",
    "type": "response-metadata",
  },
  {
    "id": "reasoning-0",
    "type": "reasoning-start",
  },
  {
    "delta": "<svg>",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "rawValue": {
      "id": "svg-stream-1",
      "svg": "<path d="M0 0",
      "type": "draft",
    },
    "type": "raw",
  },
  {
    "delta": "<path d="M0 0",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "rawValue": {
      "id": "svg-stream-1",
      "svg": "<svg>",
      "type": "content",
    },
    "type": "raw",
  },
  {
    "id": "reasoning-0",
    "type": "reasoning-end",
  },
  {
    "id": "reasoning-1",
    "type": "text-start",
  },
  {
    "delta": "<svg>",
    "id": "reasoning-1",
    "type": "text-delta",
  },
  {
    "rawValue": {
      "id": "svg-stream-1",
      "svg": "<svg><path d="M0 0L10 10"/></svg>",
      "type": "content",
      "usage": {
        "input_tokens": 9,
        "output_tokens": 15,
        "total_tokens": 24,
      },
    },
    "type": "raw",
  },
  {
    "delta": "<path d="M0 0L10 10"/></svg>",
    "id": "reasoning-1",
    "type": "text-delta",
  },
  {
    "id": "reasoning-1",
    "type": "text-end",
  },
  {
    "data": Uint8Array [
      60,
      115,
      118,
      103,
      62,
      60,
      112,
      97,
      116,
      104,
      32,
      100,
      61,
      34,
      77,
      48,
      32,
      48,
      76,
      49,
      48,
      32,
      49,
      48,
      34,
      47,
      62,
      60,
      47,
      115,
      118,
      103,
      62,
    ],
    "mediaType": "image/svg+xml",
    "type": "file",
  },
  {
    "finishReason": {
      "raw": "stop",
      "unified": "stop",
    },
    "type": "finish",
    "usage": {
      "inputTokens": {
        "cacheRead": undefined,
        "cacheWrite": undefined,
        "noCache": 9,
        "total": 9,
      },
      "outputTokens": {
        "reasoning": undefined,
        "text": 15,
        "total": 15,
      },
      "raw": {
        "input_tokens": 9,
        "output_tokens": 15,
        "total_tokens": 24,
      },
    },
  },
]
`;

exports[`QuiverLanguageModel > restarts the active text block when content snapshots reset 1`] = `
[
  {
    "type": "stream-start",
    "warnings": [],
  },
  {
    "id": "svg-stream-reset",
    "modelId": "quiver-svg",
    "type": "response-metadata",
  },
  {
    "id": "reasoning-2",
    "type": "reasoning-start",
  },
  {
    "delta": "<svg>",
    "id": "reasoning-2",
    "type": "reasoning-delta",
  },
  {
    "delta": "<rect width="10"/>",
    "id": "reasoning-2",
    "type": "reasoning-delta",
  },
  {
    "id": "reasoning-2",
    "type": "reasoning-end",
  },
  {
    "id": "reasoning-3",
    "type": "text-start",
  },
  {
    "delta": "<svg><path d="M0 0"/></svg>",
    "id": "reasoning-3",
    "type": "text-delta",
  },
  {
    "id": "reasoning-3",
    "type": "text-end",
  },
  {
    "id": "reasoning-4",
    "type": "text-start",
  },
  {
    "delta": "<svg><path d="M1 1"/></svg>",
    "id": "reasoning-4",
    "type": "text-delta",
  },
  {
    "id": "reasoning-4",
    "type": "text-end",
  },
  {
    "data": Uint8Array [
      60,
      115,
      118,
      103,
      62,
      60,
      112,
      97,
      116,
      104,
      32,
      100,
      61,
      34,
      77,
      49,
      32,
      49,
      34,
      47,
      62,
      60,
      47,
      115,
      118,
      103,
      62,
    ],
    "mediaType": "image/svg+xml",
    "type": "file",
  },
  {
    "finishReason": {
      "raw": "stop",
      "unified": "stop",
    },
    "type": "finish",
    "usage": {
      "inputTokens": {
        "cacheRead": undefined,
        "cacheWrite": undefined,
        "noCache": 6,
        "total": 6,
      },
      "outputTokens": {
        "reasoning": undefined,
        "text": 8,
        "total": 8,
      },
      "raw": {
        "input_tokens": 6,
        "output_tokens": 8,
        "total_tokens": 14,
      },
    },
  },
]
`;
